# supermariobrosnes-fastenv

./: AGENTS.md  Cargo.toml  README.md  pyproject.toml
.codex/optimization_campaigns/: current.json  ideas.md
.codex/skills/autoresearch-speed/: SKILL.md
.codex/skills/modal-benchmark/: SKILL.md
.codex/skills/modal-benchmark/agents/: openai.yaml
.codex/skills/optimize-sps/: SKILL.md
.codex/skills/optimize-sps/agents/: openai.yaml
docs/: PERFORMANCE_PLAN.md
python/supermariobrosnes_fastenv/: __init__.py  env.py
python/supermariobrosnes_turbo/: env.py
scripts/: benchmark_sps.py  benchmark_vec_env.py  capture_play_frame.py  check_vec_env_equivalence.py  compare_retro_vec_env.py  modal_benchmark_sps.py  play.py  play_policy.py  smoke_smb.py
src/: emulator.rs  lib.rs  profiler.rs  py_api.rs  vec_env.rs
tests/: test_grouped_synced_lanes.py  test_retro_vec_env_parity.py
