[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "supermariobrosnes-fastenv"
version = "0.1.0"
description = "Blazing fast SuperMarioBros-Nes environment for RL research."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "maturin>=1.7,<2",
  "pytest>=8",
]

[tool.maturin]
module-name = "supermariobrosnes_fastenv._supermariobrosnes_fastenv"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.uv]
exclude-newer = "7 days"
constraint-dependencies = [
  "mistralai!=2.4.6",
  "guardrails-ai!=0.10.1",
]
