[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "supermariobrosnes-turbo"
version = "0.1.0"
description = "Blazing fast SuperMarioBros-Nes environment for RL research."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "huggingface-hub>=1.8.0",
  "maturin>=1.7,<2",
  "pytest>=8",
  "stable-baselines3>=2.7.1",
  "stable-retro-turbo==1.0.0.post23; python_version == '3.14'",
]

[tool.maturin]
module-name = "supermariobrosnes_turbo._supermariobrosnes_turbo"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { "stable-retro-turbo" = "2026-07-01T00:00:00Z" }
constraint-dependencies = [
  "mistralai!=2.4.6",
  "guardrails-ai!=0.10.1",
]

[tool.pytest.ini_options]
markers = [
  "retro_oracle: tests that compare against stable-retro-turbo and require the local ROM",
  "slow: long-running parity stress tests",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.8.0",
    "stable-baselines3>=2.7.1",
]
